解决查询订单列表时,循环查询的问题